Move footer part

--- a/index.html
+++ b/index.html
@@ -643,12 +643,12 @@
                         </div>
                     </div>
                 </div>
-                <footer class="text-center text-gray-600 dark:text-gray-200">
-                    <a href="https://github.com/arthrmchl/arthurmichel.fr/tree/main">
-                        Made with ♥️ by me.
-                    </a>
-                </footer>
             </div>
+            <footer class="p-7 text-center text-gray-600 dark:text-gray-200">
+                <a href="https://github.com/arthrmchl/arthurmichel.fr/tree/main">
+                    Made with ♥️ by me.
+                </a>
+            </footer>
         </div>
     </main>
     <script src="https://unpkg.com/@themesberg/flowbite@1.2.0/dist/flowbite.bundle.js"></script>
